Complete Part 2: Added semantic HTML structure

--- a/index.html
+++ b/index.html
@@ -2,20 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - 2609389</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aubrey's Portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Aubrey's Portfolio</h1>
+        <h1>Welcome to Aubrey's Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Finance Manager and Computer Science Student.</p>
+            <p>I am a Finance Manager with 20 years of experience in the banking industry, currently pursuing a degree in Computer Science at Wits. I am passionate about integrating financial expertise with data modeling and software development.</p>
         </section>
+
+        <article>
+            <h3>Latest Project</h3>
+            <p>My latest project involves developing a multi-objective optimization model for bank budgeting. It uses Python to balance loan distributions against risk appetite and regulatory constraints.</p>
+        </article>
     </main>
+
     <footer>
-        <p>ID: 2609389</p>
+        <p>© 2026 2609389 | Built with Semantic HTML</p>
     </footer>
 </body>
 </html>
