Add detailed academic background to About Me section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     </header>
 
     <main>
-        <section>
+        <section id="about">
             <h2>About Me</h2>
             <p>I am a Finance Manager with 20 years of experience in the banking industry, currently pursuing a degree in Computer Science at Wits. I am passionate about integrating financial expertise with data modeling and software development.</p>
+            <p>Currently, I am focusing on bridging the gap between traditional banking finance and modern computational methods. My coursework in Mathematics and Computer Science provides the theoretical foundation for this transition.</p>
         </section>
 
         <article>
             <h3>Latest Project</h3>
-            <p>My latest project involves developing a multi-objective optimization model for bank budgeting. It uses Python to balance loan distributions against risk appetite and regulatory constraints.</p>
+            <p>I am developing a multi-objective optimization model for bank budgeting using Python and C++. The goal is to optimize loan distributions while strictly adhering to risk appetite and regulatory constraints.</p>
         </article>
     </main>
 
